--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,24 @@
 {
-  "extends": "next/core-web-vitals"
+	"env": {
+		"browser": false,
+		"es6": true,
+		"node": true
+	},
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"project": "tsconfig.json",
+		"sourceType": "module",
+		"ecmaVersion": 2020
+	},
+	"plugins": ["jest"],
+	"extends": [
+		"@hakatashi/eslint-config/typescript",
+		"prettier"
+	],
+	"rules": {
+		"import/no-named-as-default-member": "off",
+		"no-restricted-syntax": "off",
+		"camelcase": "off",
+		"@typescript-eslint/no-explicit-any": "warn"
+	}
 }
