--- a/package.json
+++ b/package.json
@@ -1,63 +1,34 @@
 {
-  "name": "genshin-damage-calculator",
+  "name": "ibc-app-solidity-template",
   "version": "1.0.0",
-  "description": "JavaScript library for calculating damage of Genshin Impact",
-  "type": "module",
-  "engines": {
-    "node": ">= 18.12"
-  },
-  "main": "dist/main.js",
-  "devDependencies": {
-    "@hakatashi/eslint-config": "^1.20.0",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "~29.5",
-    "@types/json-schema": "^7.0.15",
-    "@types/node": "~18",
-    "@types/node-persist": "^3.1.6",
-    "@typescript-eslint/eslint-plugin": "~6.2",
-    "@typescript-eslint/parser": "~6.2",
-    "ajv": "^8.12.0",
-    "eslint": "~8.46",
-    "eslint-config-prettier": "~9.0",
-    "eslint-plugin-jest": "~27.2",
-    "jest": "~29.6",
-    "js-yaml": "^4.1.0",
-    "json-schema-to-typescript": "^13.1.1",
-    "prettier": "~3.0",
-    "rimraf": "~5.0",
-    "ts-api-utils": "~1.0",
-    "ts-jest": "~29.1",
-    "tsx": "^4.1.1",
-    "typescript": "~5.1"
-  },
+  "description": "Template project to start building IBC enabled Solidity contracts, with Hardhat and Foundry support",
+  "main": "index.js",
   "scripts": {
-    "clean": "rimraf coverage dist tmp",
-    "prebuild": "npm run lint",
-    "build": "tsc -p tsconfig.json",
-    "build:watch": "tsc -w -p tsconfig.json",
-    "build:release": "npm run clean && tsc -p tsconfig.release.json",
-    "lint": "eslint . --ext .ts --ext .mts",
-    "test": "jest --coverage",
-    "prettier": "prettier --config .prettierrc --write .",
-    "test:watch": "jest --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Koki Takahashi <hakatasiloving@gmail.com>",
-  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/open-ibc/ibc-app-solidity-template.git"
+  },
+  "keywords": [
+    "IBC",
+    "Solidity"
+  ],
+  "author": "Polymer Labs",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/open-ibc/ibc-app-solidity-template/issues"
+  },
+  "homepage": "https://github.com/open-ibc/ibc-app-solidity-template#readme",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-foundry": "^1.1.1",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "hardhat": "^2.19.5"
+  },
   "dependencies": {
-    "axios": "^1.6.1",
-    "json-schema-to-ts": "^2.9.2",
-    "node-persist": "^3.1.3",
-    "tslib": "~2.6"
-  },
-  "volta": {
-    "node": "18.12.1"
-  },
-  "files": [
-    "__tests__/**/*",
-    "dist/**/*",
-    "src/**/*",
-    "tsconfig.json",
-    "README.md",
-    "LICENSE"
-  ]
+    "@openzeppelin/contracts": "^4.7.6",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
+    "hardhat-verify": "^1.0.0"
+  }
 }
